fix: fixed align of buttons [SEM-003]

--- a/src/ui/components/molecules/login-register-buttons/styles.scss
+++ b/src/ui/components/molecules/login-register-buttons/styles.scss
@@ -2,8 +2,6 @@
 @import '../../../../globals/mixins';
 
 .auth-buttons {
-  align-items: center;
   display: flex;
   gap: 1rem;
-  justify-content: center;
 }
